@@ -11,6 +11,7 @@ import org.delivery.api.domain.userorder.controller.model.UserOrderDetailRespons
 import org.delivery.api.domain.userorder.controller.model.UserOrderRequest;
 import org.delivery.api.domain.userorder.controller.model.UserOrderResponse;
 import org.delivery.api.domain.userorder.converter.UserOrderConverter;
+import org.delivery.api.domain.userorder.producer.UserOrderProducer;
 import org.delivery.api.domain.userorder.service.UserOrderService;
 import org.delivery.api.domain.userordermenu.converter.UserOrderMenuConverter;
 import org.delivery.api.domain.userordermenu.service.UserOrderMenuService;
@@ -32,6 +33,7 @@ public class UserOrderBusiness {
     private final StoreService storeService;
     private final StoreConverter storeConverter;
 
+    private final UserOrderProducer userOrderProducer;
     // 1. 사용자 , 메뉴 id
     // 2. userOrder 생성
     // 3. userOrderMenu 생성
@@ -41,25 +43,63 @@ public class UserOrderBusiness {
         var storeMenuEntityList = body.getStoreMenuIdList()
                 .stream()
                 .map(it -> storeMenuService.getStoreMenuWithThrow(it))
-                .collect(Collectors.toList());
-        var userOrderEntity = userOrderConverter.toEntity(user, storeMenuEntityList);
+                .toList();
+
+        var userOrderEntity = userOrderConverter.toEntity(user, body.getStoreId(), storeMenuEntityList);
+
         // 주문
         var newUserOrderEntity = userOrderService.order(userOrderEntity);
 
         // 맵핑
         var userOrderMenuEntityList = storeMenuEntityList.stream()
-                .map(it -> {
+                .map(it ->{
                     // menu +user order
                     var userOrderMenuEntity = userOrderMenuConverter.toEntity(newUserOrderEntity, it);
                     return userOrderMenuEntity;
                 })
                 .toList();
-            // 주문 내역 기록에 남기기
-            userOrderMenuEntityList.forEach(userOrderMenuService::order);
 
+        // 주문내역 기록 남기기
+        userOrderMenuEntityList.forEach(it ->{
+            userOrderMenuService.order(it);
+        });
+
+        // 비동기로 가맹점에 주문 알리기
+        userOrderProducer.sendOrder(newUserOrderEntity);
+
+        // response
         return userOrderConverter.toResponse(newUserOrderEntity);
     }
 
+
+    public List<UserOrderDetailResponse> current(User user) {
+
+        var userOrderEntityList =  userOrderService.current(user.getId());
+
+        // 주문 1건씩 처리
+        var userOrderDetailResponseList = userOrderEntityList.stream().map(it ->{
+            // 사용자가 주문 메뉴
+            var userOrderMenuEntityList = userOrderMenuService.getUserOrderMenu(it.getId());
+            var storeMenuEntityList = userOrderMenuEntityList.stream()
+                    .map(userOrderMenuEntity ->{
+                        var storeMenuEntity = storeMenuService.getStoreMenuWithThrow(userOrderMenuEntity.getStoreMenuId());
+                        return storeMenuEntity;
+                    })
+                    .collect(Collectors.toList());
+
+            // 사용자가 주문한 스토어 TODO 리팩토링 필요
+            var storeEntity = storeService.getStoreWithThrow(storeMenuEntityList.stream().findFirst().get().getStoreId());
+
+            return UserOrderDetailResponse.builder()
+                    .userOrderResponse(userOrderConverter.toResponse(it))
+                    .storeMenuResponseList(storeMenuConverter.toResponse(storeMenuEntityList))
+                    .storeResponse(storeConverter.toResponse(storeEntity))
+                    .build()
+                    ;
+        }).collect(Collectors.toList());
+
+        return userOrderDetailResponseList;
+    }
     public List<UserOrderDetailResponse> history (User user) {
         var userOrderEntityList = userOrderService.history(user.getId());
         // 주문 1건씩 처리
